test/error/tyScope.dck
%-

tydecl sex = Boy | Girl

(:def boy   
  Boy : gender)
